feat: add admin API to generate tokens
